--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,26 @@
-# Gradle files
-.gradle/
-build/
+# Node.js
+/node_modules
+.env
 
-# Local configuration file (sdk path, etc)
-local.properties
+# MacOS
+.DS_Store
 
-# Log/OS Files
-*.log
+# VS Code
+.vscode/
 
-# Android Studio generated files and folders
-captures/
-.externalNativeBuild/
-.cxx/
-*.apk
-output-metadata.json
-
-# IntelliJ
-*.iml
+# IDEs
 .idea/
-misc.xml
-deploymentTargetDropDown.xml
-render.experimental.xml
+*.iml
 
-# Keystore files
-*.jks
-*.keystore
+# Log files
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Google Services (e.g. APIs or Firebase)
-google-services.json
+# Thumbnail files
+.Thumbnails/
 
-# Android Profiling
-*.hprof
+# Editor files
+*.swp
+*.swo
